--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,22 @@ algo1/.vs/algo1/v15/ipch/AutoPCH/39f966f3524e44e6/17206.ipch
 algo1/algo1/Debug/6118.obj
 algo1/.vs/algo1/v15/ipch/AutoPCH/9e9fe1cce5f40a67/1242소풍.ipch
 algo1/algo1/Debug/17206.obj
+algo1/.vs/algo1/v15/ipch/AutoPCH/d3ddffc6e7f9ae3f/1947.ipch
+algo1/.vs/algo1/v15/ipch/AutoPCH/762b4831def98853/15649.ipch
+algo1/algo1/Debug/15649.obj
+algo1/.vs/algo1/v15/ipch/AutoPCH/ff4bd1de3a5ee235/소스.ipch
+algo1/algo1/Debug/13265.obj
+algo1/.vs/algo1/v15/ipch/AutoPCH/d181b164379c5a8f/13265.ipch
+algo1/algo1/Debug/1947.obj
+algo1/algo1/Debug/소스.obj
+algo1/algo1/Debug/2980.obj
+algo1/algo1/Debug/14888.obj
+algo1/algo1/Debug/1010.obj
+algo1/.vs/algo1/v15/ipch/AutoPCH/d8fafab2d021bd04/10991.ipch
+algo1/.vs/algo1/v15/ipch/AutoPCH/bde5cb62fb5293a4/1010.ipch
+algo1/.vs/algo1/v15/ipch/AutoPCH/3171d22320d47ec9/14888.ipch
+algo1/algo1/소스.cpp
+algo1/algo1/Debug/8979.obj
+algo1/algo1/Debug/10991.obj
+algo1/.vs/algo1/v15/ipch/AutoPCH/fa5cbf7f06daf9db/8979.ipch
+algo1/.vs/algo1/v15/ipch/AutoPCH/767a4fb4f5524f9f/2980.ipch
