--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,26 @@ algo1/algo1/Debug/8979.obj
 algo1/algo1/Debug/10991.obj
 algo1/.vs/algo1/v15/ipch/AutoPCH/fa5cbf7f06daf9db/8979.ipch
 algo1/.vs/algo1/v15/ipch/AutoPCH/767a4fb4f5524f9f/2980.ipch
+*.properties
+*.mark
+*.log
+*.setup
+*.xml
+*.index
+*.prefs
+*.snap
+*.zip
+*.gen
+*.lock
+*.project
+*.gitignore
+*.classpath
+*.xmi
+*.launch
+*.resources
+*.png
+*.dat
+*.txt
+*.ini
+*.history
+*.json
